# ocs-experiments

./: .gitignore  GOTCHAS.md  README.md  pyproject.toml  requirements.txt
astrasim/: README.md  system.json
astrasim/llama70b/: network.yml  run.sh  system.json
astrasim/synthetic/: Makefile  README.md  analyze_fct.py  compute_times.py  generate_stage_et.sh  gpu_constants.py  network_ideal.yml  network_ideal_16gpu.yml  parse_results.py  run_astrasim_ns3.sh  run_astrasim_stage.sh  run_coupled.py  run_ocs_sweep.py  system_16gpu.json
configs/: llama3_70b.yaml  toy_model.yaml
lab-notes/: 2026-06-14-note-to-ahmad.md  2026-06-14-note-to-ahmad.tex  2026-06-14-note-to-ahmed.md  2026-06-14-note-to-ahmed.tex  2026-06-16-literature-and-reading-list.md
lab-notes/experiments/: 2026-06-11-exp3-ns3-fat-tree-baseline.md  2026-06-12-ocs-ps-comparison-design.md  2026-06-13-exp4-16gpu-ocs-ps-ns3.md  2026-06-13-exp5-coupled-ocs-direct-vs-ring.md  2026-06-15-dp-sweep-and-oversub-results.md  2026-06-15-fts-ns3-trials.md
lab-notes/learnings/: 2026-06-10-tdm-operating-envelope.md  2026-06-10-workload-baseline-insights.md  2026-06-11-ocs-ps-comparison-learnings.md  (+3 more)
paper/: fts2026.tex
scripts/: convert_to_chakra.sh  install_chakra.sh  install_megatron.sh  launch_megatron.sh  launch_train.sh
src/: megatron_trace_hook.py  mock_dataset.py  model.py  trace_capture.py  train.py
tests/: conftest.py  test_dataset.py  test_llama70b_configs.py  test_model.py  test_pipeline_e2e.py  test_trace_capture.py  test_train_single_rank.py
tools/: inspect_chakra_et.py  inspect_kineto.py
(+45 files in other folders)
