[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-parallelism"
version = "0.0.1"
description = "Chakra trace pipeline scaffold for AstraSim parallelism research"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: end-to-end tests that shell out to torchrun and chakra_converter (opt-in via -m slow)",
]
addopts = "-m 'not slow' -ra"
